# advent-of-code-2022

./: .gitignore  CLAUDE.md  README.md  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  pyproject.toml
.github/workflows/: ci.yml
tests/: test_intervals.py  test_pathfinding.py  test_setup.py
utils/: interval.py  load.py  pathfinding.py  setup.py
